Closed Bug 886104 Opened 11 years ago Closed 11 years ago

Assertion failure: false (ParCall'ed functions must have scripts or be ES6 bound functions.), at ion/ParallelFunctions.cpp

Categories

(Core :: JavaScript Engine, defect)

x86_64
macOS
defect
Not set
critical

Tracking

()

RESOLVED FIXED
mozilla25

People

(Reporter: gkw, Assigned: shu)

References

Details

(Keywords: assertion, regression, testcase)

Attachments

(2 files)

Attached file stack
ParallelArray(99999, (function() {
    "use asm";
    function f() {}
    return f;
}));

asserts js debug shell on m-c changeset 4c4f75c20e9b without any CLI arguments at Assertion failure: false (ParCall'ed functions must have scripts or be ES6 bound functions.), at ion/ParallelFunctions.cpp
A threadsafe shell is needed to reproduce this issue.
autoBisect shows this is probably related to the following changeset:

The first bad revision is:
changeset:   http://hg.mozilla.org/mozilla-central/rev/3a535bd50a23
user:        Luke Wagner
date:        Mon Mar 25 15:12:44 2013 -0700
summary:     Bug 854448 - Fix debug-only null-deref in JSFunction::name (r=njn)

Luke, is bug 854448 a likely regressor?
Blocks: 854448
Flags: needinfo?(luke)
The bug is that the "use asm" lambda is a native (js::LinkAsmJS) and the DEBUG-only code in ion::ParCallToUncompiledScript does not expect a native().  I'm not sure whether the fix is just add a case to the assert or change somewhere else to prevent us from getting here; perhaps Niko/Shu could weigh in here?
Flags: needinfo?(luke)
Setting needinfo based on comment 3.
Flags: needinfo?(shu)
Flags: needinfo?(nmatsakis)
Attached patch fixSplinter Review
Adding another case sounds good for me. The branch in the generated code in CallGeneric just branches on there being no script anyways, so it seems like to me the assert is bogus -- it could happen with sufficiently diluted TI info we could end up trying to call a native in parallel.
Attachment #767512 - Flags: review?(nmatsakis)
Flags: needinfo?(shu)
Flags: needinfo?(nmatsakis)
Attachment #767512 - Flags: review?(nmatsakis) → review+
https://hg.mozilla.org/mozilla-central/rev/382e4fd8770e
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla25
Assignee: general → shu
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: