Bug 886104 - Remove assert in ParCallToUncompiledScript. (r=nmatsakis)